--- a/delete-duplicates/main.tex
+++ b/delete-duplicates/main.tex
@@ -1,8 +1,5 @@
-\documentclass[../main.tex]{subfiles}
-
-\begin{document}
 \قسمت{پاک کردن تکراری‌ها}
-\پاراگراف{}
+
 تابع زیر را به شکلی تکمیل کنید که اعضای تکراری از لیست پیوندی داده شده را، حذف نماید.
 
 \begin{latin}
@@ -21,18 +18,17 @@ void delete_duplicates(struct node *head) {
 برای درک بهتر از عملکرد تابع به مثال‌های زیر توجه کنید:
 
 \begin{latin}
-\begin{verbatim}
+\begin{minted}{output}
 Input: 1->1->2
 Output: 1->2
-\end{verbatim}
+\end{minted}
 
-\begin{verbatim}
+\begin{minted}{output}
 Input: 1->1->2->3->3
 Output: 1->2->3
-\end{verbatim}
+\end{minted}
 \end{latin}
 
-\پاراگراف{}
 ۴ نمره
 
 \end{document}
