--- a/unique/main.tex
+++ b/unique/main.tex
@@ -1,12 +1,9 @@
-\documentclass[../main.tex]{subfiles}
-
-\begin{document}
 \قسمت{یکتا}
-\پاراگراف{}
+
 تابع زیر را به شکلی تکمیل کنید که با دریافت یک رشته که تنها از حروف کوچک انگلیسی و اعداد تشکیل شده است، مشخص کند رشته یکتا است یا خیر. رشته یکتا رشته‌ای است که هیچ دو کاراکتر آن با یکدیگر برابر نیستند.
 
 \begin{latin}
-\begin{minted}[bgcolor=LightGray]{c}
+\begin{minted}{c}
 
 int is_unique(const char *str) {
   // returns 1 if str is unique and 0 otherwise
@@ -19,24 +16,16 @@ int is_unique(const char *str) {
 
 \begin{latin}
 
-\begin{verbatim}
+\begin{minted}{output}
 Input: parham
 Output: 0
-\end{verbatim}
 
-\begin{verbatim}
 Input: abr
 Output: 1
-\end{verbatim}
 
-\begin{verbatim}
 Input: yar
 Output: 1
-\end{verbatim}
-
+\end{minted}
 \end{latin}
 
-\پاراگراف{}
 ۳ نمره
-
-\end{document}
