--- a/fib-in-file/main.tex
+++ b/fib-in-file/main.tex
@@ -1,44 +1,37 @@
-\documentclass[../main.tex]{subfiles}
+\قسمت{فیبوناچی در فایل}
 
-\begin{document}
-\section{فیبوناچی در فایل}
-\paragraph{}
-تابع زیرا به شکلی تکمیل کنید 
-که جمله‌ی \lr{\textit{n}}ام فیبوناچی را محاسبه کرده
-و آن را در \textbf{انتهای} فایل داده شده یادداشت کند.
+تابع زیرا به شکلی تکمیل کنید
+که جمله‌ی \متن‌لاتین{\متن‌ایتالیک{n}}ام فیبوناچی را محاسبه کرده
+و آن را در \متن‌سیاه{انتهای} فایل داده شده یادداشت کند.
 در نظر داشته باشید عدد به صورت متنی نوشته می‌شود.
 
 \begin{latin}
-\begin{lstlisting}[language=c]
-    void fib_in_file(char *name, int n) {
-        // your code goes here
-    }
-\end{lstlisting}
+\begin{minted}{c}
+void fib_in_file(char *name, int n) {
+    // your code goes here
+}
+\end{minted}
 \end{latin}
 
 برای درک بهتر از عملکرد تابع به مثال‌های زیر توجه کنید:
 
 \begin{latin}
-\begin{verbatim}
+\begin{minted}{output}
     Input: 1
     Output: 1
-\end{verbatim}
+\end{minted}
 
-\begin{verbatim}
+\begin{minted}{output}
     Input: 2
     Output: 1
-\end{verbatim}
+\end{minted}
 
-\begin{verbatim}
+\begin{minted}{output}
     Input: 3
     Output: 2
-\end{verbatim}
+\end{minted}
 \end{latin}
 
-\paragraph{}
 ۴ نمره
 
-\paragraph{نکات}
 در نظر داشته باشید که حتما در هنگام باز کردن فایل خطا را نیز مورد بررسی قرار دهید.
-
-\end{document}
