--- a/hello-world/main.tex
+++ b/hello-world/main.tex
@@ -1,21 +1,15 @@
-\documentclass[../main.tex]{subfiles}
+\قسمت{سلام دنیا}
 
-\begin{document}
-\section{سلام دنیا}
-\paragraph{}
 این سوال برای آشنایی بیشتر با روند برگزاری آزمون‌های مجازی طراحی شده است.
 نام، نام‌خانوادگی، تاریخ امروز را نوشته و آن را در قالب
-\lr{pdf}
-در سامانه مودل به آدرس
-\url{https://courses.aut.ac.ir}
+\متن‌لاتین{pdf}
+در
+\تارنما{https://courses.aut.ac.ir}{سامانه مودل}
 بارگذاری کنید.
 
-\paragraph{}
 در طول آزمون شما به همه‌ی سوالات درسترسی داشته و می‌توانید بین سوالات جابجا شوید.
-برای اطمینان هرچه بیشتر از بارگذاری صحیح پاسخ‌هایتان در پایان آزمون همه سوالات را در قالب
-\lr{zip}
-برای آدرس من
-\url{mailto://parham.alvani@gmail.com}
+برای اطمینان هرچه بیشتر از بارگذاری صحیح پاسخ‌هایتان، در پایان آزمون پاسخ همه سوالات را در قالب
+\متن‌لاتین{zip}
+به
+\تارنما{mailto://parham.alvani@gmail.com}{آدرس ایمیل من}
 ارسال کنید.
-
-\end{document}
