feat: change repository structure

--- a/intersection/main.tex
+++ b/intersection/main.tex
@@ -1,8 +1,5 @@
-\documentclass[../main.tex]{subfiles}
-
-\begin{document}
 \قسمت{اشتراک لیست‌های پیوندی}
-\پاراگراف{}
+
 تابع زیر را به شکلی تکمیل کنید که با دریافت دو لیست پیوندی متشکل از اعداد صحیح اشتراک آن‌ها را محاسبه کرده و در قالب یک لیست پیوندی جدید برگرداند. پیشنهادی می‌شود برای این سوال توابعی که برای کار با لیست پیوندی لازم دارید پیاده‌سازی کرده و در نهایت تابع زیر را با استفاده از آن‌ها تکمیل کنید.
 در نظر داشته باشید که لیست‌های پیوندی ورودی حاوی عناصر تکراری نمی‌باشند.
 
@@ -22,18 +19,13 @@ struct node *lists_intersection(struct node *l1, struct node *l2) {
 برای درک بهتر از عملکرد تابع به مثال‌های زیر توجه کنید:
 
 \begin{latin}
-\begin{verbatim}
+\begin{minted}
 Input: 1->1-2 1->2->3
 Output: 1->2
-\end{verbatim}
 
-\begin{verbatim}
 Input: 1->1 2->3->3
 Output: NULL
-\end{verbatim}
+\end{minted}
 \end{latin}
 
-\پاراگراف{}
 ۵ نمره
-
-\end{document}
