fix: correct exam name

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 
 \جزئیات‌آزمون{
   دانشگاه={دانشگاه صنعتی امیرکبیر},
-  نام={میان‌ترم},
+  نام={آزمون پایانی},
   ترم={نیم سال دوم ۱۴۰۰-۱۴۰۱},
   زمان={۱۲۰}
 }
