fix: correct typo

--- a/period/main.tex
+++ b/period/main.tex
@@ -32,7 +32,7 @@ Output:
 
 \شروع{شمارش}[ا -]
 
-\فقره فرض کنید طول هر خط حداکثر برابر با ۲۰۰ کاراکتر می‌باشد. ۴ نمره
+\فقره فرض کنید طول هر خط حداکثر برابر با ۲۰۰ کاراکتر باشد. ۴ نمره
 
 \فقره فرض کنید طول خط‌ها از پیش مشخص نشده است. ۶ نمره
 
