--- a/mini-max-sum/main.tex
+++ b/mini-max-sum/main.tex
@@ -37,3 +37,11 @@ int arr[] = {1, 3, 5, 7, 9};
 
 
 ۲ نمره
+
+\شروع{پاسخ}
+
+\begin{latin}
+  \inputminted{c}{./mini-max-sum/main.c}
+\end{latin}
+
+\پایان{پاسخ}
