feat: add printing tokens solution

--- a/printing-tokens/main.tex
+++ b/printing-tokens/main.tex
@@ -32,3 +32,16 @@ C
 
 
 ۴ نمره
+
+\شروع{پاسخ}
+
+دو روش کلی برای این سوال وجود دارد. در روش اول رشته را کاراکتر به کاراکتر خوانده و آن‌ها را چاپ می‌کنیم و به محض پیدا کردن فاصله به جای آن کاراکتر \متن‌لاتین{newline} را چاپ می‌کنیم.
+در روش دوم با استفاده از تابع \متن‌لاتین{strchr} اولین محل فاصله را پیدا می‌کنیم، در این روش نیاز داریم که زیر رشته از ابتدای رشته تا به اینجا را نگهداری کنیم و از همین رو، با استفاده از تابع \متن‌لاتین{malloc}
+یک زیر رشته جدید ساخته و از ابتدای رشته به اینجا را با استفاده از تابع \متن‌لاتین{strcpy} در آن ذخیره می‌کنیم. در ادامه نیاز داریم اشاره‌گر به ابتدای رشته را تغییر دهیم تا در فراخوانی بعدی \متن‌لاتین{strchr}
+محل رخداد فاصله بعدی را پیدا کنیم.
+
+\begin{latin}
+  \inputminted{c}{./printing-tokens/main.c}
+\end{latin}
+
+\پایان{پاسخ}
