feat: add solutions

--- a/boxes/main.tex
+++ b/boxes/main.tex
@@ -53,3 +53,11 @@ int main()
 قسمتی از برنامه مورد نیاز این شرکت نوشته شده است. آن را کامل کنید.
 
 ۲ نمره
+
+\شروع{پاسخ}
+
+\begin{latin}
+  \inputminted{c}{./boxes/main.c}
+\end{latin}
+
+\پایان{پاسخ}
