--- a/reverse-array/main.tex
+++ b/reverse-array/main.tex
@@ -32,3 +32,15 @@ int num = 4
 \end{latin}
 
 ۳ نمره
+
+
+\شروع{پاسخ}
+
+برای برعکس کردن آرایه نیاز است که آن را تا نیمه پیمایش کرده و اعضای آن را جابجا کنیم.
+دقت داشته باشید برای جابجایی نیاز به یک متغیر کمکی دارید.
+
+\begin{latin}
+  \inputminted{c}{./reverse-array/main.c}
+\end{latin}
+
+\پایان{پاسخ}
