feat: add solutions

--- a/period/main.tex
+++ b/period/main.tex
@@ -40,3 +40,11 @@ Output:
 
 در نظر داشته باشید که حتما در هنگام باز کردن فایل خطا را نیز مورد بررسی قرار دهید.
 مشخص است که تنها نیاز به حل یکی از قسمت‌ها می‌باشد و حل هر دو قسمت نمره‌ی اضافه‌ای ندارد.
+
+\شروع{پاسخ}
+
+\begin{latin}
+  \inputminted{c}{./period/main.c}
+\end{latin}
+
+\پایان{پاسخ}
