feat: add solutions

--- a/sorted-students/main.tex
+++ b/sorted-students/main.tex
@@ -14,7 +14,7 @@ struct student {
     int grade;
     int id;
     char name[200];
-}:
+};
 
 void students_sort(struct student *students,
     int students_len) {
@@ -24,3 +24,14 @@ void students_sort(struct student *students,
 \end{latin}
 
 ۳ نمره
+
+
+\شروع{پاسخ}
+
+در نظر داشته باشید که تابع مقایسه کننده باید دقیقا امضایی که در پاسخ آمده است را داشته باشد.
+
+\begin{latin}
+  \inputminted{c}{./sorted-students/main.c}
+\end{latin}
+
+\پایان{پاسخ}
